--- a/eWallet.Backend/eWallet.Backend/Web.config
+++ b/eWallet.Backend/eWallet.Backend/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <configSections>
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
@@ -99,4 +99,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IChannelAPI" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://127.0.0.1:7999/ewallet_internet" binding="basicHttpBinding"
+        bindingConfiguration="BasicHttpBinding_IChannelAPI" contract="CoreAPI.IChannelAPI"
+        name="BasicHttpBinding_IChannelAPI" />
+    </client>
+  </system.serviceModel>
 </configuration>
