--- a/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
+++ b/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
@@ -303,6 +303,8 @@
     <None Include="Service References\CoreAPI\ewallet_internet1.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Box\ResultProfile.cshtml" />
+    <Content Include="Views\Box\CustomerProfile_ListProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
