--- a/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
+++ b/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
@@ -304,6 +304,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="Views\Box\CustomerProfile_ListProfile.cshtml" />
+    <Content Include="Views\Transaction\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
