--- a/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
+++ b/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
@@ -49,8 +49,9 @@
     <Reference Include="eWallet.Common">
       <HintPath>..\..\..\lib\eWallet.Common.dll</HintPath>
     </Reference>
-    <Reference Include="eWallet.Data">
-      <HintPath>..\..\..\lib\eWallet.Data.dll</HintPath>
+    <Reference Include="eWallet.Data, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\core\eWallet.Data\bin\Debug\eWallet.Data.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
