--- a/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
+++ b/eWallet.Backend/eWallet.Backend/eWallet.Backend.csproj
@@ -185,6 +185,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BillinginfoController.cs" />
     <Compile Include="Controllers\FinanceAccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OperationController.cs" />
@@ -306,6 +307,8 @@
     </None>
     <Content Include="Views\Box\CustomerProfile_ListProfile.cshtml" />
     <Content Include="Views\Transaction\Search.cshtml" />
+    <Content Include="Views\Billinginfo\Index.cshtml" />
+    <Content Include="Views\Box\Billing_info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
